--- a/.env
+++ b/.env
@@ -14,8 +14,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=378481475a31787bd308b8723e73cef4
+APP_ENV=prod
+APP_DEBUG=0
+APP_SECRET=378481475a31787bd308b8723dfaze73cef4
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
@@ -27,9 +28,9 @@ APP_SECRET=378481475a31787bd308b8723e73cef4
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # DATABASE_URL=mysql://monUSER:monPWD@127.0.0.1:monPort/maBaseDeDonnee
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
-DATABASE_USER=root
-DATABASE_PWD=PassRoot
-DATABASE_NAME=redmine
+DATABASE_USER=--
+DATABASE_PWD=---
+DATABASE_NAME=----
 DATABASE_HOST=127.0.0.1
 ###< doctrine/doctrine-bundle ###
 
